--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,12 @@
   "rules": {
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "warn",
-    "@typescript-eslint/ban-ts-comment": "off"
+    "@typescript-eslint/ban-ts-comment": "off",
+	"prettier/prettier": [
+		"error",
+		{
+		  "endOfLine": "auto"
+		}
+	  ]
   }
 }
