--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,31 @@
 {
-  "extends": [
-    "next",
-    "plugin:@typescript-eslint/recommended",
-    "next/core-web-vitals",
-    "eslint:recommended",
-    "plugin:prettier/recommended",
-    "prettier"
-  ],
-  "plugins": ["@typescript-eslint", "prettier"],
-  "globals": {
-    "React": "readonly"
-  },
-  "rules": {
-    "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": "warn",
-    "@typescript-eslint/ban-ts-comment": "off",
-	"prettier/prettier": [
-		"error",
-		{
-		  "endOfLine": "auto"
-		}
-	  ]
-  }
+	"extends": [
+		"next",
+		"plugin:@typescript-eslint/recommended",
+		"next/core-web-vitals",
+		"eslint:recommended",
+		"plugin:prettier/recommended",
+		"prettier"
+	],
+	"plugins": ["@typescript-eslint", "prettier"],
+	"globals": {
+		"React": "readonly"
+	},
+	"rules": {
+		"no-unused-vars": "off",
+		"@typescript-eslint/ban-ts-comment": "off",
+		"prettier/prettier": [
+			"error",
+			{
+				"endOfLine": "auto"
+			}
+		],
+		"@typescript-eslint/no-unused-vars": [
+			"error",
+			{
+				"argsIgnorePattern": "^_",
+				"varsIgnorePattern": "_"
+			}
+		]
+	}
 }
