--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "formatting": "npx prettier --write ./src"
   },
   "dependencies": {
+    "@pbe/react-yandex-maps": "^1.2.4",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "cookies-next": "^2.1.1",
     "dayjs": "^1.11.7",
+    "final-form": "^4.20.9",
     "next": "13.4.2",
     "next-pwa": "^5.6.0",
     "normalize.css": "^8.0.1",
+    "qs": "^6.11.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-final-form": "^6.5.9",
     "swr": "^2.1.5"
   },
   "engines": {
@@ -29,6 +34,7 @@
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
     "@types/node": "^20.2.1",
+    "@types/qs": "^6.9.7",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
