--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-final-form": "^6.5.9",
-    "swr": "^2.1.5"
+    "swr": "^2.1.5",
+    "yup": "^1.2.0"
   },
   "engines": {
     "node": ">=16.14.0",
