--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "formatting": "npx prettier --write ./src"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "@pbe/react-yandex-maps": "^1.2.4",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
@@ -28,10 +29,10 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-final-form": "^6.5.9",
-    "swr": "^2.1.5",
-    "yup": "^1.2.0",
     "react-select": "^5.7.3",
-    "react-textarea-autosize": "^8.4.1"
+    "react-textarea-autosize": "^8.4.1",
+    "swr": "^2.1.5",
+    "yup": "^1.2.0"
   },
   "engines": {
     "node": ">=16.14.0",
