--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "formatting": "npx prettier --write ./src"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.1.0",
     "@pbe/react-yandex-maps": "^1.2.4",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
@@ -22,7 +21,6 @@
     "final-form": "^4.20.9",
     "next": "13.4.2",
     "next-pwa": "^5.6.0",
-    "normalize.css": "^8.0.1",
     "qs": "^6.11.2",
     "react": "18.2.0",
     "react-datepicker": "^4.12.0",
@@ -31,8 +29,8 @@
     "react-final-form": "^6.5.9",
     "react-select": "^5.7.3",
     "react-textarea-autosize": "^8.4.1",
-    "swr": "^2.1.5",
-    "yup": "^1.2.0"
+    "sharp": "^0.32.1",
+    "swr": "^2.1.5"
   },
   "engines": {
     "node": ">=16.14.0",
